// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`vault-health report shape is a stable contract (snapshot) 1`] = `
{
  "generatedAt": "2026-07-28T00:00:00Z",
  "kind": "vault-health",
  "referenced": [
    {
      "envKey": "DNS",
      "item": "DNS Token",
      "status": "ok",
      "vault": "cloudflare",
    },
    {
      "envKey": "GH",
      "item": "GitHub PAT",
      "status": "missing",
      "vault": "factorywager",
    },
    {
      "envKey": "GOOD",
      "item": "Good Token",
      "status": "ok",
      "vault": "factorywager",
    },
    {
      "envKey": "TG",
      "item": "Telegram: bot",
      "status": "trashed",
      "vault": "factorywager",
    },
  ],
  "summary": {
    "activeItems": 2,
    "healthy": false,
    "referencedMissing": 1,
    "referencedOk": 2,
    "referencedTrashed": 1,
    "tokensInvalid": 0,
    "tokensOk": 0,
    "tokensUnreachable": 0,
    "trashedItems": 1,
    "vaultCount": 2,
  },
  "tokenProbes": [],
  "vaults": [
    {
      "active": 1,
      "name": "cloudflare",
      "trashed": 0,
      "trashedTitles": [],
    },
    {
      "active": 1,
      "name": "factorywager",
      "trashed": 1,
      "trashedTitles": [
        "Telegram: bot",
      ],
    },
  ],
}
`;

exports[`vault-health healthy report shape (snapshot) 1`] = `
{
  "generatedAt": "2026-07-28T00:00:00Z",
  "kind": "vault-health",
  "referenced": [
    {
      "envKey": "DNS",
      "item": "DNS Token",
      "status": "ok",
      "vault": "cloudflare",
    },
  ],
  "summary": {
    "activeItems": 2,
    "healthy": true,
    "referencedMissing": 0,
    "referencedOk": 1,
    "referencedTrashed": 0,
    "tokensInvalid": 0,
    "tokensOk": 0,
    "tokensUnreachable": 0,
    "trashedItems": 1,
    "vaultCount": 2,
  },
  "tokenProbes": [],
  "vaults": [
    {
      "active": 1,
      "name": "cloudflare",
      "trashed": 0,
      "trashedTitles": [],
    },
    {
      "active": 1,
      "name": "factorywager",
      "trashed": 1,
      "trashedTitles": [
        "Telegram: bot",
      ],
    },
  ],
}
`;

exports[`vault-health vault-map referenced inventory is stable (snapshot) 1`] = `
[
  {
    "envKey": "CLOUDFLARE_ACCESS_API_TOKEN",
    "field": "password",
    "inTemplate": true,
    "item": "Cloudflare Access API Token",
    "passRef": "pass://factorywager/Cloudflare Access API Token/password",
    "vault": "factorywager",
  },
  {
    "envKey": "CLOUDFLARE_API_TOKEN",
    "field": "password",
    "inTemplate": true,
    "item": "Cloudflare API Token",
    "passRef": "pass://factorywager/Cloudflare API Token/password",
    "vault": "factorywager",
  },
  {
    "envKey": "CLOUDFLARE_DNS_API_TOKEN",
    "field": "password",
    "inTemplate": true,
    "item": "Cloudflare API Token (DNS)",
    "passRef": "pass://factorywager/Cloudflare API Token (DNS)/password",
    "vault": "factorywager",
  },
  {
    "envKey": "DOD_ID_ENCRYPTION_KEY",
    "field": "password",
    "inTemplate": true,
    "item": "DOD ID Encryption Key",
    "passRef": "pass://factorywager/DOD ID Encryption Key/password",
    "vault": "factorywager",
  },
  {
    "envKey": "DOD_PROOF_SECRET",
    "field": "password",
    "inTemplate": true,
    "item": "DOD Proof Secret",
    "passRef": "pass://factorywager/DOD Proof Secret/password",
    "vault": "factorywager",
  },
  {
    "envKey": "FACTORY_WAGER_TOKEN",
    "field": "password",
    "inTemplate": true,
    "item": "FactoryWager Registry Token",
    "passRef": "pass://factorywager/FactoryWager Registry Token/password",
    "vault": "factorywager",
  },
  {
    "envKey": "GITHUB_TOKEN",
    "field": "note",
    "inTemplate": false,
    "item": "GitHub PAT",
    "passRef": "pass://factorywager/GitHub PAT/note",
    "vault": "factorywager",
  },
  {
    "envKey": "PARTNER_API_TOKEN",
    "field": "password",
    "inTemplate": false,
    "item": "Tennis HQ Partner API Token",
    "passRef": "pass://factorywager/Tennis HQ Partner API Token/password",
    "vault": "factorywager",
  },
  {
    "envKey": "PLAY_SIGNING_SECRET",
    "field": "password",
    "inTemplate": true,
    "item": "Play Signing Secret",
    "passRef": "pass://factorywager/Play Signing Secret/password",
    "vault": "factorywager",
  },
  {
    "envKey": "PROVISION_ENCRYPTION_KEY",
    "field": "password",
    "inTemplate": true,
    "item": "Provision Encryption Key",
    "passRef": "pass://factorywager/Provision Encryption Key/password",
    "vault": "factorywager",
  },
  {
    "envKey": "R2_ACCESS_KEY_ID",
    "field": "username",
    "inTemplate": true,
    "item": "R2 bun-secrets bucket",
    "passRef": "pass://factorywager/R2 bun-secrets bucket/username",
    "vault": "factorywager",
  },
  {
    "envKey": "R2_SECRET_ACCESS_KEY",
    "field": "password",
    "inTemplate": true,
    "item": "R2 bun-secrets bucket",
    "passRef": "pass://factorywager/R2 bun-secrets bucket/password",
    "vault": "factorywager",
  },
  {
    "envKey": "REGISTRY_SECRET",
    "field": "password",
    "inTemplate": true,
    "item": "Registry Dev Secret",
    "passRef": "pass://factorywager/Registry Dev Secret/password",
    "vault": "factorywager",
  },
  {
    "envKey": "REPORT_SIGNING_SECRET",
    "field": "password",
    "inTemplate": true,
    "item": "Report Signing Secret",
    "passRef": "pass://factorywager/Report Signing Secret/password",
    "vault": "factorywager",
  },
  {
    "envKey": "SOCKET_API_KEY",
    "field": "password",
    "inTemplate": true,
    "item": "Socket API Key",
    "passRef": "pass://factorywager/Socket API Key/password",
    "vault": "factorywager",
  },
  {
    "envKey": "SSH_DEPLOY_KEY",
    "field": "note",
    "inTemplate": false,
    "item": "SSH Deploy Key",
    "passRef": "pass://factorywager/SSH Deploy Key/note",
    "vault": "factorywager",
  },
  {
    "envKey": "TELEGRAM_BOT_FACTORY",
    "field": "password",
    "inTemplate": true,
    "item": "Telegram: factorywager_bot",
    "passRef": "pass://factorywager/Telegram: factorywager_bot/password",
    "vault": "factorywager",
  },
  {
    "envKey": "TELEGRAM_WEBHOOK_SECRET",
    "field": "password",
    "inTemplate": true,
    "item": "Telegram Webhook Secret",
    "passRef": "pass://factorywager/Telegram Webhook Secret/password",
    "vault": "factorywager",
  },
]
`;
